--- a/packages/components/style/variable/prefix.less
+++ b/packages/components/style/variable/prefix.less
@@ -61,6 +61,7 @@
 @textarea-prefix: ~'@{idux-prefix}-textarea';
 @time-picker-prefix: ~'@{idux-prefix}-time-picker';
 @time-range-picker-prefix: ~'@{idux-prefix}-time-range-picker';
+@upload-prefix: ~'@{idux-prefix}-upload';
 
 // Feedback
 @alert-prefix: ~'@{idux-prefix}-alert';
