--- a/packages/components/default.less
+++ b/packages/components/default.less
@@ -57,3 +57,4 @@
 @import './tooltip/style/themes/default.less';
 @import './tree/style/themes/default.less';
 @import './typography/style/themes/default.less';
+@import './upload/style/themes/default.less';
