--- a/packages/components/style/variable/prefix.less
+++ b/packages/components/style/variable/prefix.less
@@ -65,6 +65,7 @@
 @time-range-picker-prefix: ~'@{idux-prefix}-time-range-picker';
 @tree-select-prefix: ~'@{idux-prefix}-tree-select';
 @tree-select-option-prefix: ~'@{idux-prefix}-tree-select-option';
+@upload-prefix: ~'@{idux-prefix}-upload';
 
 // Feedback
 @alert-prefix: ~'@{idux-prefix}-alert';
