--- a/packages/components/upload/style/index.less
+++ b/packages/components/upload/style/index.less
@@ -1,4 +1,11 @@
+@import "./list.less";
+
 .@{upload-prefix} {
+
+  &-selector {
+    display: inline-block;
+  }
+
   &-input {
     display: none;
   }
