--- a/packages/components/upload/style/themes/default.less
+++ b/packages/components/upload/style/themes/default.less
@@ -1,1 +1,11 @@
+@import '../../../style/themes/default.less';
 @import '../index.less';
+
+@upload-list-margin: 8px 0 0;
+@upload-list-text-border: 1px solid @color-graphite-l30;
+
+@upload-file-border-bottom: 1px solid @color-graphite-l30;
+
+@upload-icon-margin: 0 0 0 16px;
+@upload-icon-file-margin: 0 8px 0 0;
+
