--- a/packages/components/upload/style/themes/default.less
+++ b/packages/components/upload/style/themes/default.less
@@ -2,10 +2,24 @@
 @import '../index.less';
 
 @upload-list-margin: 8px 0 0;
+
 @upload-list-text-border: 1px solid @color-graphite-l30;
+
+@upload-list-image-thumb-width: 48px;
+@upload-list-image-thumb-height: 48px;
+@upload-list-image-thumb-margin: 0 8px 0 0;
+
+@upload-list-image-card-height: 96px;
+@upload-list-image-card-width: 96px;
+@upload-list-image-card-margin: 0 8px 8px 0;
+@upload-list-image-card-bg-color: @color-black;
+@upload-list-image-card-icon-wrap-width: 100%;
+@upload-list-image-card-selector-font-size: 24px;
+@upload-list-image-card-selector-color-hover: #458FFF;
 
 @upload-file-border-bottom: 1px solid @color-graphite-l30;
 
 @upload-icon-margin: 0 0 0 16px;
 @upload-icon-file-margin: 0 8px 0 0;
 
+@upload-tip-margin: 8px 0 0;
