--- a/packages/components/upload/style/themes/default.less
+++ b/packages/components/upload/style/themes/default.less
@@ -4,6 +4,7 @@
 @upload-list-margin: 8px 0 0;
 
 @upload-list-text-border: 1px solid @color-graphite-l30;
+@upload-list-border-radius: 2px;
 
 @upload-list-image-thumb-width: 48px;
 @upload-list-image-thumb-height: 48px;
