--- a/packages/components/upload/style/themes/default.less
+++ b/packages/components/upload/style/themes/default.less
@@ -2,13 +2,17 @@
 @import '../index.less';
 
 @upload-list-margin: 8px 0 0;
+@upload-border-radius: 2px;
+
+@upload-selector-drag-border: 1px dashed @color-graphite-l20;
+@upload-selector-dragover-border: 1px dashed @color-blue;
 
 @upload-list-text-border: 1px solid @color-graphite-l30;
-@upload-list-border-radius: 2px;
 
 @upload-list-image-thumb-width: 48px;
 @upload-list-image-thumb-height: 48px;
 @upload-list-image-thumb-margin: 0 8px 0 0;
+@upload-list-image-margin: 8px 0 0;
 
 @upload-list-image-card-height: 96px;
 @upload-list-image-card-width: 96px;
@@ -17,6 +21,8 @@
 @upload-list-image-card-icon-wrap-width: 100%;
 @upload-list-image-card-selector-font-size: 24px;
 @upload-list-image-card-selector-color-hover: #458FFF;
+@upload-list-image-card-status-min-width: 60px;
+@upload-list-image-card-status-progress-margin: 8px 0 0;
 
 @upload-file-border-bottom: 1px solid @color-graphite-l30;
 
