--- a/packages/components/upload/style/index.less
+++ b/packages/components/upload/style/index.less
@@ -1,10 +1,25 @@
 @import "./list.less";
+@import "./mixin.less";
 
 .@{upload-prefix} {
 
   &-selector {
     display: inline-block;
     cursor: pointer;
+
+    &-drag {
+      border-radius: @upload-border-radius;
+      border: @upload-selector-drag-border;
+      .base-transition();
+
+      &:hover {
+        border: @upload-selector-dragover-border;
+      }
+    }
+
+    &-dragover {
+      border: @upload-selector-dragover-border;
+    }
   }
 
   &-input {
