--- a/packages/components/upload/style/index.less
+++ b/packages/components/upload/style/index.less
@@ -20,6 +20,13 @@
     &-dragover {
       border: @upload-selector-dragover-border;
     }
+
+    &-disabled {
+      .upload-disabled-cursor();
+      .upload-disabled-bg-color();
+      .upload-disabled-color();
+      .upload-disabled-border-color();
+    }
   }
 
   &-input {
