--- a/packages/components/upload/style/mixin.less
+++ b/packages/components/upload/style/mixin.less
@@ -24,6 +24,15 @@
   }
 }
 
+.upload-disabled-border-color() {
+  &,
+  &:hover,
+  &:focus,
+  &:active {
+    border-color: @color-graphite-l20;
+  }
+}
+
 .base-transition() {
   transition: all .3s;
 }
