--- a/packages/components/upload/style/themes/default.less
+++ b/packages/components/upload/style/themes/default.less
@@ -26,6 +26,7 @@
 
 @upload-file-border-bottom: 1px solid @color-graphite-l30;
 
+@upload-icon-wrap-max-width: 120px;
 @upload-icon-margin: 0 0 0 16px;
 @upload-icon-file-margin: 0 8px 0 0;
 
